<empty commit message>

--- a/test-eskdx-lyx/newTT1.16.lyx
+++ b/test-eskdx-lyx/newTT1.16.lyx
@@ -15952,14 +15952,14 @@ quad{}}
 \end_layout
 
 \begin_layout Standard
+Тест Тескст
+\end_layout
+
+\begin_layout Standard
 \begin_inset Float table
 wide false
 sideways false
 status open
-
-\begin_layout Plain Layout
-
-\end_layout
 
 \begin_layout Plain Layout
 \begin_inset Caption
@@ -16090,6 +16090,18 @@ sysabbr{}
  постановки комплекса задач ФП планирования аудиторских проверок»;
 \end_layout
 
+\begin_layout Plain Layout
+вф
+\end_layout
+
+\begin_layout Plain Layout
+ыфвфы
+\end_layout
+
+\begin_layout Plain Layout
+ыфв
+\end_layout
+
 \end_inset
 </cell>
 </row>
@@ -16098,6 +16110,18 @@ sysabbr{}
 \end_inset
 
 
+\end_layout
+
+\begin_layout Plain Layout
+аукеуке
+\end_layout
+
+\begin_layout Plain Layout
+укеуке
+\end_layout
+
+\begin_layout Plain Layout
+укеук
 \end_layout
 
 \begin_layout Plain Layout
